fix #70 runtime support running on different versions of spark